--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>PhisherFTW Web-Page</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -35,20 +35,21 @@
             <p>Total Minutes: <br> Max: 130 - Min: 100</p>
         </section>
         <section class="smartGoals box">
-            <h1>Goals</h1>
+            <h1>Focus Areas & SMART Goals</h1>
             <h3>SMART Goals</h3>
+            <p>Specific | Measurable | Achieveable | Relevant | Time-bound</p>
             <ul>
                 <li>Improve Crosshair placement to below 11 degrees in 3 weeks</li>
                 <li>Improve my Spray Accuracy to 39% from 37% in 1 month</li>
                 <li>Increase my Flash Blind Duraction from 2.8 seconds to 3 seconds in 1.5 months</li>
                 <li>Increase my Grenade damage to enemies from 6 to 11 in 2 months</li>
             </ul>
-            <h4>SMART</h4>
-            <p>Specific</p>
-            <p>Measurable</p>
-            <p>Achieveable</p>
-            <p>Relevant</p>
-            <p>Time-bound</p>
+
+            <h3>Focus Areas</h3>
+            <p>Incorrect counter-strafing</p>
+            <p>Weak Spray control</p>
+            <p>Bad Utility Usage</p>
+            <p>Not enough Utility used</p>
         </section>
         <section class="settings box">
             <h1>Settings & Equipment</h1>
@@ -74,14 +75,6 @@
                 <li>Video settings:</li>
             </ul>
         </section>
-        <section class="focusAreas box">
-            <h1>Focusareas</h1>
-            <h3>Main Areas of weakness:</h3>
-            <p>Incorrect counter-strafing</p>
-            <p>Weak Spray control</p>
-            <p>Bad Utility Usage</p>
-            <p>Not enough Utility used</p>
-        </section>
         <section class="lessonCount box">
             <h1>Lessons</h1>
             <div class="lessons">
@@ -98,9 +91,53 @@
                     <p>10/10/2022 7:30pm - 9:30pm (GMT+2)</p>
                 </div>
             </div>
-            <h2>Lesson 1 (Introduction Lesson/Live Analysis)</h2>
-            <h3>Notes:</h3>
-            <p></p>
+            <div class="acc-container">
+                <h2 class="acc-btn">Lesson 1 (Introduction Lesson/Live Analysis)</h2>
+            <div class="acc-content">
+                <h3>What we went over</h3>
+                <ul>
+                    <li>Counter-Strafing</li>
+                    <li>spraying</li>
+                    <li>Dust2 Utility</li>
+                    <li>Dust2 Off-angles & On-angles</li>
+                </ul>
+                <h3>Lesson video</h3>
+                <video width="320" height="240" controls>
+                    <source src="images/test.mp4" type="video/mp4">
+                    <source src="movie.ogg" type="video/ogg">
+                  Your browser does not support the video tag.
+                </video>
+                <h3>Match notes</h3>
+                <p>
+                    How my notes are structured:
+                    <br> 
+                    round number. what kind of buy you had, notes on what exactly happened during the round. W/L win or loss
+                </p>
+                <ol>
+                    <li>Pistol armor, good team aggression down middle but didn’t expect the guy lurking apps to flank you, when doing delayed pushes down middle this should always be a possibility in the back of your mind. W</li>
+                    <li>Famas buy, Good nade down middle but throw from further back so you can’t get caught by someone peeking mexico, and good readiness to rotate, but it was a bit preemptive nice kill lane, but peeking apps was awkward as you fell which delayed the speed and accuracy you could shoot into apps allowing the enemy to kill. W</li>
+                    <li>MP9 armor, There was a bit of overaggressive down middle without the proper support to make it worthwhile, next time recommend teammates flash second middle in order to delay them pushing up and make sure one stays top mid to deal with anyone peeking second middle. L</li>
+                    <li>Deagle, lane, when there is a bad lane smoke like there was one this round you can try to exploit it as the enemies probably won’t be expecting you to take advantage of their smoke, fantastic Juan deag on the guy as the smoke was fading, good return on investment, and nice clutch from a teammate. W</li>
+                    <li>Full buy, unfortunately, the enemy rushed B this round overpowering your teammates there, this caused a delayed rotation from you and your teammate into an unwinnable situation, and you were chased by mac-10s. L</li>
+                    <li>P250, when jump spotting apps, you get valuable information but so does the enemies, they will be expecting you to be in apps and counter utility is to be expected like they did with that molly, you decided to go agro after being mollied which was a good idea to try catch them off-guard but it didn’t work. L</li>
+                    <li>Deagle, because of no armor, the aim-punch from the mac-10 got you hard which caused to you die almost instantly, not much you could do in that situation I recommend playing closer range angles and allow the enemy to give away their position with their sound instead of jiggle peeking for info as any damage you take while jiggling will slow you down significantly and give you alot of aimpunch without armor. L</li>
+                    <li>Full buy, your early rotation caused a gap to be open up onto the A site, which led your teammate into taking a fight and losing to a position they thought you had covered, this allowed the enemies to get an advanced position which eventually caught you off-guard when you rotated back, slow down your rotations and suggest the arch players to go instead of the apps/lane players. W</li>
+                    <li>Full buy, Swapping positions can be a good play if another player is struggling on a certain site, you seemed very unsure of your positioning and were making dangerous decisions as the enemies were just about the execute although fortunately you were able to get into position and get the first kill, good idea to change positions but your decisions were a bit slow and unsure, when you choose to change positions do it quickly and stick to your choices. L</li>
+                    <li>Full save, you boosted your teammate at the wrong spot leading them to miss a jump which caused the enemy to peek boiler, I recommend only doing this early round otherwise most players will be throwing away this position or taking bad fights. L</li>
+                    <li>Nova armor, You went for the retake, but what I would have recommended instead as the enemies were playing very aggressively is play exits as this will give you the advantage in any gunfight you will take instead of trying to hunt them down. L</li>
+                    <li>Full buy, when playing on B and changing positions you are doing it very loudly and if anyone is top banana they will be able to pinpoint your exact position, when it is a 2v4 I always recommend saving instantly as carrying the buy you have into the next round will almost always be more beneficial to your team in the long run than attempting a very difficult retake, although good attempt getting two kills on the retake. L</li>
+                    <li>Full buy, You are constantly rotating between sites, this makes it so you haven’t really been on the initial fights and almost always retaking a site or leaving a site they are taking, I understand you are trying to be at every site they are taking to help but sometimes, you are too quick to react and leave your teammate at any fake the enemies do, slow it down. L</li>
+                    <li>Full buy, good banana control, and great peek timing down banana to get a free kill, also good flank on the guy apps to get the kill. W</li>
+                    <li>Pistol armor, A bit of over aggression when your teammates were taking B and you decided to push through the lane smoke and look for the CT on A but you managed to get the kill, be weary as if you died here it could have allowed the enemies a chance back into the round. W</li>
+                    <li>Full buy, The take on B was a good idea but your team started baiting and slowing down this allowed the enemies to peek into you and your teammates with Deagle which is unfortunate. L</li>
+                    <li>Full save, peeking lane alone wasn’t the best idea but you did decent damage to the one lane, although in the future these kinds of pushes and peeks must be done as a team in order to get any kind of success. L</li>
+                    <li>Galil buy, good trade kill on the guy coffins and good idea to push CT smoke, but walking into ruins backwards wasn’t a good idea as you should always expect someone to be there as it is the best position for CT’s to delay T’s taking site. L</li>
+                    <li>CZ, awkward push banana, as the enemies were stacking and had superior weaponry without utility. L</li>
+                    <li>Full buy, Your team was taking early fights which left you and a teammate in a 2v4 situation with the CT’s going overly agressive this forced you to take a fight you were not ready for. L</li>
+                    <li>Full buy, enemies throwing alot of utility middle, you were blinded and taking damage from everywhere this round was over before it started. L</li>
+                </ol>
+            </div>
+            </div>
         </section>
         <section class="leetifyStats box">
             <h1>Leetify-stats</h1>
@@ -175,7 +212,7 @@
             <h2>3 months</h2>
             <h2>6 months</h2>
         </section>
-        <div class="box test">yeehaw</div>
     </main>
+    <script src="script.js"></script>
 </body>
 </html>
