--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <main>
         <div class="header">
-            <h1 class="middle">PhisherFTW</h1>
+            <h1 class="middle name">PhisherFTW</h1>
         </div>
         <section class="training-routine box">
             <h1>Training Routine:</h1>
@@ -67,7 +67,6 @@
                 <li>SSD: 256gb</li>
                 <li>Cooler: (Optional)</li>
                 <p>AVG FPS: 260</p>
-                <br>
                 <h3>Peripherals</h3>
                 <li>Mouse: Logitech G Pro Superlight</li>
                 <li>Headphones: Corsair Pro</li>
@@ -75,10 +74,20 @@
                 <li>Mousepad: QCK Heavy</li>
                 <li>Monitor 1: Alienware 240hz 24" 1080P</li>
                 <li>Monitor 2: Asus 144hz 24" 1080P</li>
-                <br>
                 <h3>In-game settings</h3>
                 <li>Sensitivity: In-game 1 & DPI 800</li>
-                <li>Video settings:</li>
+                <h4>Video settings:</h4>
+                <li>Brightness – 130%. </li>
+                <li>Display Mode – Fullscreen.</li> 
+                <li>Global Shadow Quality – High.</li> 
+                <li>Model/Texture Detail – Low.</li> 
+                <li>Texture Streaming – Disabled.</li>
+                <li>Effect Detail – Low.</li>
+                <li>Shader Detail – Low.</li>
+                <li>Multisampling Anti-Aliasing Mode – None.</li>
+                <li>FXAA Anti-Aliasing – Disabled.</li>
+                <li>Boost Player Contrast – ON. (Set to Off if it causes an issue)</li>
+                <li>Texture Filtering Mode – Trilinear.</li>
             </ul>
         </section>
         <section class="lessonCount box">
