--- a/index.html
+++ b/index.html
@@ -39,22 +39,22 @@
             <h3>SMART Goals</h3>
             <p>Specific | Measurable | Achieveable | Relevant | Time-bound</p>
             <ul>
-                <li>Improve Crosshair placement to below 11 degrees in 3 weeks</li>
-                <li>Improve my Spray Accuracy to 39% from 37% in 1 month</li>
-                <li>Increase my Flash Blind Duraction from 2.8 seconds to 3 seconds in 1.5 months</li>
-                <li>Increase my Grenade damage to enemies from 6 to 11 in 2 months</li>
+                <li class="red">Improve Crosshair placement from 12 degrees to 11 degrees in 1 weeks</li>
+                <li class="red">Improve my Spray Accuracy to 39% from 37% in 1 month</li>
+                <li class="orange">Increase my Flash Blind Duraction from 2.8 seconds to 3 seconds in 1.5 months</li>
+                <li class="red">Increase my Grenade damage to enemies from 6 to 11 in 2 months</li>
             </ul>
 
-            <h3>Focus Areas</h3>
-            <p>Incorrect counter-strafing</p>
-            <p>Weak Spray control</p>
-            <p>Bad Utility Usage</p>
-            <p>Not enough Utility used</p>
+            <h3>General Goals</h3>
+            <p>Perfect counter-strafing</p>
+            <p>Get to Level 10</p>
+            <p>Learn to Multistrafe</p>
+            <p>Use more effective utility</p>
 
             <h3>Completed SMART Goals</h3>
             <ul>
-                <li>Improved Crosshair placement to 12 degrees from 15 in 5 weeks</li>
-                <li>Improved Counter-strafing from 50% to 75% in 2 weeks</li>
+                <li class="green">Improved Crosshair placement to 12 degrees from 15 in 5 weeks</li>
+                <li class="green">Improved Counter-strafing from 50% to 75% in 2 weeks</li>
             </ul>
         </section>
         <section class="settings box">
@@ -88,18 +88,21 @@
                 <li>FXAA Anti-Aliasing – Disabled.</li>
                 <li>Boost Player Contrast – ON. (Set to Off if it causes an issue)</li>
                 <li>Texture Filtering Mode – Trilinear.</li>
+                <h3>Launch Options</h3>
+                <p>-console -novid -tickrate 128 -freq 240 +exec autoexec.cfg -high -nojoy</p>
             </ul>
+            <a href="images/autoexec.cfg" download class="cfg">Config File</a>
         </section>
         <section class="lessonCount box">
             <h1>Lessons</h1>
             <div class="lessons">
                 <div class="lesson">
-                    <h3>Lessons Completed:</h3>
-                    <p>10</p>
+                    <h3>SessionsCompleted:</h3>
+                    <p>10(20 hours)</p>
                 </div>
                 <div class="lesson">
-                    <h3>Unredeemed Lessons:</h3>
-                    <p>15</p>
+                    <h3>Unredeemed Sessions:</h3>
+                    <p>15(30 hours)</p>
                 </div>
                 <div class="lesson">
                     <h3>Next lesson</h3>
@@ -107,7 +110,7 @@
                 </div>
             </div>
             <div class="acc-container">
-                <h2 class="acc-btn">Lesson 1 (Introduction Lesson/Live Analysis)</h2>
+                <h2 class="acc-btn">Lesson 1 (Introduction Lesson/Live Analysis) 10/6/2022</h2>
             <div class="acc-content">
                 <h3>What we went over</h3>
                 <ul>
@@ -165,7 +168,7 @@
             </div>
             </div>
             <div class="acc-container">
-                <h2 class="acc-btn">Lesson 2 Live Analysis</h2>
+                <h2 class="acc-btn">Lesson 2 Live Analysis 22/6/2022</h2>
             <div class="acc-content">
                 <h3>What we went over</h3>
                 <ul>
@@ -223,7 +226,7 @@
             </div>
             </div>
             <div class="acc-container">
-                <h2 class="acc-btn">Lesson 3 Live Analysis</h2>
+                <h2 class="acc-btn">Lesson 3 Live Analysis 1/7/2022</h2>
             <div class="acc-content">
                 <h3>What we went over</h3>
                 <ul>
@@ -281,7 +284,7 @@
             </div>
             </div>
             <div class="acc-container">
-                <h2 class="acc-btn">Lesson 4 Live Analysis</h2>
+                <h2 class="acc-btn">Lesson 4 Live Analysis 16/7/2022</h2>
             <div class="acc-content">
                 <h3>What we went over</h3>
                 <ul>
@@ -339,7 +342,7 @@
             </div>
             </div>
             <div class="acc-container">
-                <h2 class="acc-btn">Lesson 5 Knowledge Based</h2>
+                <h2 class="acc-btn">Lesson 5 Knowledge Based 1/8/2022</h2>
             <div class="acc-content">
                 <h3>What we went over</h3>
                 <ul>
@@ -397,7 +400,7 @@
             </div>
             </div>
             <div class="acc-container">
-                <h2 class="acc-btn">Lesson 6 Knowledge Based</h2>
+                <h2 class="acc-btn">Lesson 6 Knowledge Based 15/8/2022</h2>
             <div class="acc-content">
                 <h3>What we went over</h3>
                 <ul>
@@ -455,7 +458,7 @@
             </div>
             </div>
             <div class="acc-container">
-                <h2 class="acc-btn">Lesson 7 Live Demo Review</h2>
+                <h2 class="acc-btn">Lesson 7 Live Demo Review 25/8/2022</h2>
             <div class="acc-content">
                 <h3>What we went over</h3>
                 <ul>
@@ -513,7 +516,7 @@
             </div>
             </div>
             <div class="acc-container">
-                <h2 class="acc-btn">Lesson 8 Live Demo Review</h2>
+                <h2 class="acc-btn">Lesson 8 Live Demo Review 1/9/2022</h2>
             <div class="acc-content">
                 <h3>What we went over</h3>
                 <ul>
@@ -571,7 +574,7 @@
             </div>
             </div>
             <div class="acc-container">
-                <h2 class="acc-btn">Lesson 9 Live Analysis</h2>
+                <h2 class="acc-btn">Lesson 9 Live Analysis 15/9/2022</h2>
             <div class="acc-content">
                 <h3>What we went over</h3>
                 <ul>
@@ -629,7 +632,7 @@
             </div>
             </div>
             <div class="acc-container">
-                <h2 class="acc-btn">Lesson 10 Live Analysis</h2>
+                <h2 class="acc-btn">Lesson 10 Live Analysis 1/10/2022</h2>
             <div class="acc-content">
                 <h3>What we went over</h3>
                 <ul>
