--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PhisherFTW Web-Page</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    
 </head>
 <body>
     <main>
@@ -33,6 +37,8 @@
                 <li>FFA DM 30-45 mins or 250 kills ~ Focus on spraying for the head.</li>
             </ul>
             <p>Total Minutes: <br> Max: 130 - Min: 100</p>
+            <!-- <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
+            <label for="vehicle1">I have trained today!</label> -->
         </section>
         <section class="smartGoals box">
             <h1>Focus Areas & SMART Goals</h1>
@@ -91,7 +97,11 @@
                 <h3>Launch Options</h3>
                 <p>-console -novid -tickrate 128 -freq 240 +exec autoexec.cfg -high -nojoy</p>
             </ul>
-            <a href="images/autoexec.cfg" download class="cfg">Config File</a>
+            <h3>Configs</h3>
+            <div class="downloads">
+                <a href="images/autoexec.cfg" download class="cfg">Download Personal</a>
+                <a href="images/practise.cfg" download class="cfg">Download Practise</a>
+            </div>
         </section>
         <section class="lessonCount box">
             <h1>Lessons</h1>
