--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <label for="vehicle1">I have trained today!</label> -->
         </section>
         <section class="smartGoals box">
-            <h1>Focus Areas & SMART Goals</h1>
+            <h1>General Goals & SMART Goals</h1>
             <h3>SMART Goals</h3>
             <p>Specific | Measurable | Achieveable | Relevant | Time-bound</p>
             <ul>
@@ -984,6 +984,70 @@
                             <td>65%</td>
                         </tr>
                     </table>
+                </div>
+            </div>
+        </section>
+        <!-- <section class="settings box">
+            <h1>Settings & Equipment</h1>
+            <ul>
+                <h3>Machine</h3>
+                <li>CPU: Intel I5 9500</li>
+                <li>GPU: GTX 1080TI</li>
+                <li>RAM: 16GB 2666</li>
+                <li>SSD: 256gb</li>
+                <li>Cooler: (Optional)</li>
+                <p>AVG FPS: 260</p>
+                <h3>Peripherals</h3>
+                <li>Mouse: Logitech G Pro Superlight</li>
+                <li>Headphones: Corsair Pro</li>
+                <li>Keyboard: Razer Black Widow (Silent Keys)</li>
+                <li>Mousepad: QCK Heavy</li>
+                <li>Monitor 1: Alienware 240hz 24" 1080P</li>
+                <li>Monitor 2: Asus 144hz 24" 1080P</li>
+                <h3>In-game settings</h3>
+                <li>Sensitivity: In-game 1 & DPI 800</li>
+                <h4>Video settings:</h4>
+                <li>Brightness – 130%. </li>
+                <li>Display Mode – Fullscreen.</li> 
+                <li>Global Shadow Quality – High.</li> 
+                <li>Model/Texture Detail – Low.</li> 
+                <li>Texture Streaming – Disabled.</li>
+                <li>Effect Detail – Low.</li>
+                <li>Shader Detail – Low.</li>
+                <li>Multisampling Anti-Aliasing Mode – None.</li>
+                <li>FXAA Anti-Aliasing – Disabled.</li>
+                <li>Boost Player Contrast – ON. (Set to Off if it causes an issue)</li>
+                <li>Texture Filtering Mode – Trilinear.</li>
+                <h3>Launch Options</h3>
+                <p>-console -novid -tickrate 128 -freq 240 +exec autoexec.cfg -high -nojoy</p>
+            </ul>
+            <h3>Configs</h3>
+            <div class="downloads">
+                <a href="images/autoexec.cfg" download class="cfg">Download Personal</a>
+                <a href="images/practise.cfg" download class="cfg">Download Practise</a>
+            </div>
+        </section> -->
+        <section class="Maps box">
+            <h1>CS:GO Active Duty maps</h1>
+            <!-- <div class="acc-container"> -->
+                <h2 class="collapsible">Dust2</h2>
+                <div class="content">
+                    <div class="acc-container">
+                        <h3 class="collapsible">Utility</h3>
+                        <div class="content">
+                            <h3>CT side utility</h3>
+                            <h4>Long</h4>
+                            <h4>Short</h4>
+                            <h4>Middle</h4>
+                            <h4>B</h4>
+                        </div>
+                    </div>
+                    <div>
+                        <h3>CT-Angles</h3>
+                    </div>
+                    <div>
+                        <h3>T-Angles</h3>
+                    </div>
                 </div>
             </div>
         </section>
