Updated favicon and overall layout

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="images/android-chrome-512x512.png">
     
 </head>
 <body>
@@ -987,49 +988,19 @@
                 </div>
             </div>
         </section>
-        <!-- <section class="settings box">
-            <h1>Settings & Equipment</h1>
-            <ul>
-                <h3>Machine</h3>
-                <li>CPU: Intel I5 9500</li>
-                <li>GPU: GTX 1080TI</li>
-                <li>RAM: 16GB 2666</li>
-                <li>SSD: 256gb</li>
-                <li>Cooler: (Optional)</li>
-                <p>AVG FPS: 260</p>
-                <h3>Peripherals</h3>
-                <li>Mouse: Logitech G Pro Superlight</li>
-                <li>Headphones: Corsair Pro</li>
-                <li>Keyboard: Razer Black Widow (Silent Keys)</li>
-                <li>Mousepad: QCK Heavy</li>
-                <li>Monitor 1: Alienware 240hz 24" 1080P</li>
-                <li>Monitor 2: Asus 144hz 24" 1080P</li>
-                <h3>In-game settings</h3>
-                <li>Sensitivity: In-game 1 & DPI 800</li>
-                <h4>Video settings:</h4>
-                <li>Brightness – 130%. </li>
-                <li>Display Mode – Fullscreen.</li> 
-                <li>Global Shadow Quality – High.</li> 
-                <li>Model/Texture Detail – Low.</li> 
-                <li>Texture Streaming – Disabled.</li>
-                <li>Effect Detail – Low.</li>
-                <li>Shader Detail – Low.</li>
-                <li>Multisampling Anti-Aliasing Mode – None.</li>
-                <li>FXAA Anti-Aliasing – Disabled.</li>
-                <li>Boost Player Contrast – ON. (Set to Off if it causes an issue)</li>
-                <li>Texture Filtering Mode – Trilinear.</li>
-                <h3>Launch Options</h3>
-                <p>-console -novid -tickrate 128 -freq 240 +exec autoexec.cfg -high -nojoy</p>
-            </ul>
-            <h3>Configs</h3>
-            <div class="downloads">
-                <a href="images/autoexec.cfg" download class="cfg">Download Personal</a>
-                <a href="images/practise.cfg" download class="cfg">Download Practise</a>
+        <!-- <section class="box Personal">
+            <h1>Personal notes</h1>
+            <div class="container">
+                <div id="newtask">
+                    <input type="text" placeholder="Task to be done..">
+                    <button id="push">Add</button>
+                </div>
+                <div id="tasks"></div>
             </div>
         </section> -->
-        <section class="Maps box">
-            <h1>CS:GO Active Duty maps</h1>
-            <!-- <div class="acc-container"> -->
+        <!-- <section class="Maps box">
+            <h1>CS:GO Active Duty maps (Work in progress)</h1>
+                <div class="acc-container">
                 <h2 class="collapsible">Dust2</h2>
                 <div class="content">
                     <div class="acc-container">
@@ -1050,8 +1021,9 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
     </main>
+    <script src="https://kit.fontawesome.com/facf1a9547.js" crossorigin="anonymous"></script>
     <script src="script.js"></script>
 </body>
 </html>
