--- a/index.html
+++ b/index.html
@@ -997,8 +997,8 @@
                 </div>
                 <div id="tasks"></div>
             </div>
-        </section> -->
-        <!-- <section class="Maps box">
+        </section>
+        <section class="Maps box">
             <h1>CS:GO Active Duty maps (Work in progress)</h1>
                 <div class="acc-container">
                 <h2 class="collapsible">Dust2</h2>
